discussion/kv_engine/131651/131651_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-16181: Use isInDefaultCollection in AllKeysCallback::callback

Check for default collection without a full collection decode

Change-Id: I70297c2efd71759fe86a0ff6c4cde87e27e972b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-06-30 13:39:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-30 14:22:36.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24902/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/getkeys.cc:47:20:
error: no member named "isDefaultCollection" in "DocKey"; did you mean "isInDefaultCollection"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24902/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28889/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\getkeys.cc(47): error C2039: "isDefaultCollection": is not a member of "DocKey" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28889/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3078/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/getkeys.cc:47:20: error: no member named "isDefaultCollection" in "DocKey"; did you mean "isInDefaultCollection"? [clang-diagnostic-error]
        if (outKey.isDefaultCollection()) {
                   ^~~~~~~~~~~~~~~~~~~
                   isInDefaultCollection
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/dockey.h:379:10: note: "isInDefaultCollection" declared here
    bool isInDefaultCollection() const;
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3078/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/getkeys.cc:47:20:
error: no member named "isDefaultCollection" in "DocKey"; did you mean "isInDefaultCollection"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3078/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4441/ : FAILURE

Compile error at [2020-06-30T14:15:54.814Z] ../kv_engine/engines/ep/src/getkeys.cc:47:20:
error: ?struct DocKey? has no member named ?isDefaultCollection?; did you mean ?isInDefaultCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4507/ : FAILURE

Compile error at [2020-06-30T14:22:08.300Z] ../kv_engine/engines/ep/src/getkeys.cc:47:20:
error: ?struct DocKey? has no member named ?isDefaultCollection?; did you mean ?isInDefaultCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4507/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4605/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3546/ : FAILURE

Compile error at [2020-06-30T14:08:35.763Z] ../kv_engine/engines/ep/src/getkeys.cc:47:20:
error: no member named "isDefaultCollection" in "DocKey"; did you mean "isInDefaultCollection"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3546/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12331/ : FAILURE

Compile error at [2020-06-30T14:21:31.159Z] ../kv_engine/engines/ep/src/getkeys.cc:47:20:
error: ?struct DocKey? has no member named ?isDefaultCollection?; did you mean ?isInDefaultCollection??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12331/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1584/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
